--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -17,14 +17,14 @@
 html,
 body {
   @include typography.typography('body1');
-  background-color: #000;
+  background-color: #111;
   color: theme.$on-surface;
   margin: 0;
   padding: 0;
 }
 
 main {
-  background-image: linear-gradient(#fff, #ccc);
+  background-image: linear-gradient(#111, #000);
   min-height: calc(100vh - 100px);
   padding-bottom: 100px;
 }
@@ -104,4 +104,18 @@ a {
 }
 a:visited {
   color: color.scale(#40b3ff, $lightness: -35%);
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar {
+  right: 0;
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #666;
+  border-radius: 3px;
 }
